# DVPWA

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml
.github/scripts/: defectdojo-upload.sh
.github/workflows/: backend-ci.yml  dast.yml  frontend-ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  deps.py  main.py  security.py  seed.py  uploads.py
backend/app/models/: __init__.py  holding.py  order.py  password_reset_token.py  stock.py  support_ticket.py  transaction.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  health.py  orders.py  portfolio.py  stocks.py  support.py  uploads.py  users.py  wallet.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: admin.ts  auth.ts  client.ts  orders.ts  portfolio.ts  stocks.ts  support.ts  types.ts  users.ts  wallet.ts
frontend/src/components/: NavBar.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  ForgotPassword.tsx  Login.tsx  OrdersHistory.tsx  Profile.tsx  Register.tsx  ResetPassword.tsx  StockDetail.tsx  StocksBrowse.tsx  SupportForm.tsx  Wallet.tsx
frontend/src/pages/admin/: AdminReports.tsx  AdminStocks.tsx  AdminSupportTickets.tsx  AdminUsers.tsx
infra/k8s/: 00-namespace.yaml  10-db-secret.yaml  11-db-pvc.yaml  12-db-deployment.yaml  13-db-service.yaml  20-api-config.yaml  21-api-secret.yaml  22-api-deployment.yaml  23-api-service.yaml  30-frontend-deployment.yaml  31-frontend-service.yaml  50-gateway.yaml  51-httproutes.yaml  60-serviceaccounts.yaml  61-rbac-viewer.yaml  70-networkpolicy-default-deny.yaml  71-networkpolicy-db.yaml  72-networkpolicy-api.yaml  73-networkpolicy-frontend.yaml
